# rhythmic_shapes

./: Cargo.toml  README.md  todo.md
src/: main.rs  model.rs  prelude.rs  sequencer.rs  util.rs
src/audio/: mod.rs  model.rs  process.rs  sine.rs
src/audio/voice/: handler.rs  mod.rs  note.rs
src/model/: app_model.rs  constructors.rs  event.rs  mod.rs  params.rs  update.rs  view.rs
src/ui/: draw.rs  mod.rs  text_slider.rs
src/ui/shape/: mod.rs  node.rs
src/util/: atomic_ops.rs  ramp.rs
