[package]
name = "rhythmic_shapes"
version = "1.0.0"
edition = "2021"
authors = ["jamiegibney <jamiegibneyuk@gmail.com>"]
description = "Rhythmic shapes demo for University"
readme = "./README.md"
repository = "https://github.com/jamiegibney/rhythmic_shapes"

[package.metadata.bundle]
name = "Rhythmic Shapes"
identifier = "com.jamiegibney.rhs"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic = "0.6.0"
nannou = "0.18.1"
nannou_audio = "0.18.0"
